deploy/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"pod-autoscaler-example:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"pod-autoscaler-example\")].image"}]'
    openshift.io/generated-by: OpenShiftNewApp
  labels:
    app: pod-autoscaler-example
    app.kubernetes.io/component: pod-autoscaler-example
    app.kubernetes.io/instance: pod-autoscaler-example
  name: pod-autoscaler-example
  namespace: autoscaler-example
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: pod-autoscaler-example
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        deployment: pod-autoscaler-example
    spec:
      setHostnameAsFQDN: true
      containers:
      - image: quay.io/mdewald/pod-autoscaler-example:latest
        resources:
          requests:
            memory: 128Mi
          limits:
            memory: 256Mi
        imagePullPolicy: Always
        name: pod-autoscaler-example
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        ports:
        - containerPort: 8081
        - containerPort: 8082
        command: ["/pod-autoscaler-example", "pod-autoscaler-example.autoscaler-example.svc.cluster.local:8081"]
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
