deploy/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pod-autoscaler-example
    app.kubernetes.io/component: pod-autoscaler-example
    app.kubernetes.io/instance: pod-autoscaler-example
  name: pod-autoscaler-example
  namespace: autoscaler-example
spec:
  clusterIP: 172.30.67.114
  clusterIPs:
  - 172.30.67.114
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 8081
  selector:
    deployment: pod-autoscaler-example
